# VoidFinder

./: .gitignore  ALGORITHM.md  DEVELOPMENT_PLAN.md  PROJECT_STATUS.md  README.md  pyproject.toml
Papers/: Jennings_Li_Hu_2013_void_abundance.md
docs/: pinocchio_catalog_format.md  reference_workflow.md  scientific_conventions.md
scripts/: audit_n256_vast_vide_inputs.py  calibrate_radius_scale.py  calibrate_vsf_likelihood.py  compare_void_size_functions.py  debug_n256_vast_vide_mismatch.py  debug_n256_vide_region.py  debug_theory_vsf.py  diagnose_n256_initial_position_grid.py  match_n256_void_centers.py  optimize_n256_full_algorithm_mcmc.py  optimize_n256_joint_calibration_mcmc.py  optimize_n256_vsf_mcmc.py  plot_n128_n256_void_size_functions.py  plot_n256_halo_void_slice.py  plot_n256_vast_vide_diagnostics.py  plot_n256_void_size_function.py  plot_n256_void_slice.py  plot_void_size_function.py  run_n256_vast_voidfinder.py
tests/: test_audit_n256_vast_vide_inputs_script.py  test_calibrate_radius_scale_script.py  test_calibrate_vsf_likelihood_script.py  test_calibration.py  test_catalog.py  test_cli.py  test_compare_void_size_functions_script.py  test_config.py  test_debug_n256_vast_vide_mismatch_script.py  test_debug_n256_vide_region_script.py  test_debug_theory_vsf_script.py  test_geometry.py  test_import.py  test_match_n256_void_centers_script.py  test_optimize_n256_full_algorithm_mcmc_script.py  test_optimize_n256_joint_calibration_mcmc_script.py  test_optimize_n256_vsf_mcmc_script.py  test_paired_loader.py  test_pinocchio_reader.py  test_theory.py  (+8 more)
(+20 files in other folders)
